@@ -430,6 +430,43 @@
 					<key>xmlEncodingVersion</key>
 					<string>2.0</string>
 				</dict>
+				<key>textStorage</key>
+				<dict>
+					<key>English.lproj</key>
+					<dict>
+						<key>description</key>
+						<string>text of the session</string>
+						<key>humanReadableName</key>
+						<string>contents</string>
+						<key>number</key>
+						<string>singular</string>
+						<key>sex</key>
+						<string>none</string>
+					</dict>
+					<key>appleEventCode</key>
+					<string>ctxt</string>
+					<key>codeGenDict</key>
+					<dict>
+						<key>callDidChange</key>
+						<true/>
+						<key>callUndoManager</key>
+						<true/>
+						<key>implementAccessors</key>
+						<true/>
+						<key>implementAsPrimitive</key>
+						<false/>
+						<key>pbType</key>
+						<string>NSTextStorage</string>
+					</dict>
+					<key>presentationOrder</key>
+					<integer>2</integer>
+					<key>readOnly</key>
+					<string>YES</string>
+					<key>type</key>
+					<string>NSTextStorage</string>
+					<key>xmlEncodingVersion</key>
+					<string>2.0</string>
+				</dict>
 				<key>tty</key>
 				<dict>
 					<key>English.lproj</key>
